# flox-build-examples

./: .gitignore  AGENTS.md  Makefile  README.md  test.sh
.github/workflows/: build-and-test.yml
quotes-app-cpp/: .gitignore  Makefile  quotes.json  quotes_server.cpp
quotes-app-cpp/.flox/: env.json
quotes-app-cpp/.flox/env/: manifest.toml
quotes-app-cpp/.flox/pkgs/: quotes-app-cpp-nix.nix
quotes-app-go/: .gitignore  Makefile  go.mod  main.go
quotes-app-go/.flox/: env.json
quotes-app-go/.flox/env/: manifest.toml
quotes-app-jvm/: Makefile  README.md  settings.gradle.kts
quotes-app-jvm/.flox/: env.json
quotes-app-jvm/.flox/env/: manifest.toml
quotes-app-nodejs/: Makefile  app.js  package-lock.json  package.json  quotes.json
quotes-app-nodejs/.flox/: env.json
quotes-app-nodejs/.flox/env/: manifest.toml
quotes-app-php/: Makefile  index.php
quotes-app-php/.flox/: env.json
quotes-app-php/.flox/env/: manifest.toml
quotes-app-pip/.flox/cache/: upgrade-checks.json
quotes-app-pip/.flox/env/: manifest.toml
quotes-app-pip/.flox/log/: watchdog.c1a80d2b.log.2025-07-17
quotes-app-pip/.flox/run/: aarch64-darwin.quotes-app-pip.dev  (+1 more)
quotes-app-python/: pyproject.toml
quotes-app-python/.flox/env/: manifest.toml
quotes-app-rb/: Makefile  quotes
quotes-app-rs/: Cargo.toml  Makefile
quotes-app-rs/.flox/: env.json
quotes-app-rs/.flox/env/: manifest.toml
quotes-app-rs/src/: main.rs
quotes-app-ruby/: README.md
quotes-app-ruby/.flox/: env.json
quotes-app-rust/: Cargo.toml  Makefile
quotes-app-rust/.flox/: env.json
(+8 files in other folders)
