[package]
name = "quotes-app-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["tracing", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
tower-http = { version = "0.6.1", features = ["trace"] }
